# attribute-forecasting-system

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PATENT_CLAIMS.md  PROGRESS.md  PROJECT_SUMMARY.md  PROMPT_B_COMPLETE.md  PROMPT_C_COMPLETE.md  PROMPT_D_COMPLETE.md  PROMPT_E_COMPLETE.md  PROMPT_F_COMPLETE.md  PROMPT_G_COMPLETE.md  QUICKSTART.md  README.md  README_TRAINING.md  RUN_LOCAL.md  SETUP_COMPLETE.md  SETUP_INSTRUCTIONS.md  claude_prompt_pack.md  docker-compose.yml  setup.sh  start_backend.sh  test_api.sh
.github/workflows/: ci.yml  deploy-azure.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  deps.py  main.py  schemas.py
backend/app/routers/: forecasts.py  training.py  trends.py  uploads.py
backend/app/services/: baseline_model.py  data_pipeline.py  data_processor.py  explain.py  explainability.py  feature_fusion.py  model.py  trend_ingest.py
backend/app/storage/: __init__.py  azure_blob.py  db.py  fs.py  storage_service.py
backend/tests/: test_api.py  test_pipeline.py  test_predict.py  test_training.py  test_upload.py
data/seed/: inventory.csv  products.csv  sales.csv  social_trends.csv
docs/: AZURE_STORAGE_SETUP.md  DATA_UPLOAD_FEATURE.md  _config.yml  index.html
frontend/: .dockerignore  Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AttributeHeatmap.tsx  ForecastTable.tsx  KPI.tsx  TrendSpark.tsx  WhatIfPanel.tsx
frontend/src/pages/: Dashboard.tsx  (+2 more)
